--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=download" />
-    <title>Login Form</title>
+    <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/en/e/e9/I._K._Gujral_Punjab_Technical_University_logo.png">
+    <title>IKGPTU</title>
 </head>
 <body>
     <div id="page1" class="container">
