--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>IKGPTU</title>
 </head>
 <body>
-    <div id="page1" class="container">
+        <h2>temporary band kiti e</h2>
+<!--     <div id="page1" class="container">
         <div class="form-container">
             <img src="logo.png" alt="University Logo" class="logo">
             <h2>Sign in</h2>
@@ -30,7 +31,6 @@
         <div class="user-profile">
             <img src="https://sds.bcps.edu.bd/sms/images/loading-send.gif" alt="Profile" class="profile-image">
             <span class="welcome-text">Welcome</span>
-            <!-- <h2>HARPAL SINGH (2226509)</h2> -->
              <h2></h2>
         </div>
         
@@ -56,7 +56,7 @@
             <h3>Latest Enquiry(s)</h3>
             <p>No Enquiry Found</p>
         </div>
-    </div>
+    </div> -->
 
     <script src="script.js"></script>
 </body>
