--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>IKGPTU</title>
 </head>
 <body>
-        <h2>temporary band kiti e</h2>
-<!--     <div id="page1" class="container">
+        <!-- <h2>temporary band kiti e</h2> -->
+    <div id="page1" class="container">
         <div class="form-container">
             <img src="logo.png" alt="University Logo" class="logo">
             <h2>Sign in</h2>
@@ -37,7 +37,7 @@
         <div class="announcement-container">
             <h3>Announcement</h3>
             <div class="announcement">
-                <span>University 2025 New Addmitions Open.</span>
+                <span>University 2026 New Addmitions Open.</span>
                 <a href="download_link" class="download-icon"></a>
             </div>
         </div>
@@ -45,7 +45,7 @@
         <div class="hot-links">
             <h3>Hot Links</h3>
             <div class="link">
-                <span>Examination December 2025 Result</span>
+                <span>Examination December 2025 - 2026 Result Publish</span>
                 <a href="video.html" class="download-icon"><span id="down" class="material-symbols-outlined">
                     download
                     </span></a>
@@ -56,7 +56,7 @@
             <h3>Latest Enquiry(s)</h3>
             <p>No Enquiry Found</p>
         </div>
-    </div> -->
+    </div>
 
     <script src="script.js"></script>
 </body>
